--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -27,10 +27,6 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/webapp"/>
-                                
-        
-        
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resource"/>
                         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test"/>
@@ -38,6 +34,7 @@
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
                                         
         
         
