실시간 처리 버그 수정

--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                                                    
+                                                            
+    
+    
     
     
     
@@ -12,7 +14,9 @@
     
     
     <wb-module deploy-name="Book_Project-0.0.1-SNAPSHOT">
-                                                                                                        
+                                                                                                                        
+        
+        
         
         
         
@@ -25,7 +29,9 @@
         
         
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-                                                                                                        
+                                                                                                                        
+        
+        
         
         
         
@@ -38,7 +44,9 @@
         
         
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                                                                                                        
+                                                                                                                        
+        
+        
         
         
         
@@ -51,7 +59,9 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                                                                                                
+                                                                                                                
+        
+        
         
         
         
@@ -63,36 +73,6 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/webapp"/>
-                                                                                        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test"/>
-                                                                                        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main"/>
-                                                        
-        
-        
-        
-        
-        
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/target/generated-sources/annotations"/>
                                                                                                         
         
         
@@ -105,15 +85,64 @@
         
         
         
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test"/>
+                                                                                                        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main"/>
+                                                                        
+        
+        
+        
+        
+        
+        
+        
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+                        
+        
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/target/generated-sources/annotations"/>
+                
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/.apt_generated"/>
+                
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/.apt_generated_tests"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/target/generated-test-sources/test-annotations"/>
+                                                                                                                        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
         <property name="java-output-path" value="/Book_Proejct/target/classes"/>
-                                                        
+                                                                        
+        
+        
         
         
         
         
         
         <property name="context-root" value="Book_Project"/>
-                                                                                                    
+                                                                                                                    
+    
+    
     
     
     
@@ -126,7 +155,9 @@
     
     
     </wb-module>
-                                                
+                                                        
+
+
 
 
 
